# orangescogs

./: .gitignore  LICENSE  README.md  info.json  pyproject.toml
.github/workflows/: python-app.yml
animals/: __init__.py  animals.py  info.json
based/: based.py  info.json
codebases/: __init__.py  codebases.py  info.json
fridge/: __init__.py  fridge.py  info.json
gbp/: __init__.py  gbp.py  info.json
models/: tgschema.py
pet/: __init__.py  pets.py
rolemanage/: __init__.py  info.json  rolemanage.py
tests/: schematest.py
tgcommon/: setup.py
tgcommon/tgcommon/: __init__.py  errors.py  models.py  util.py
tgcommon/tgcommon/models/: __init__.py  tgschema.py
tgdb/: __init__.py  info.json  tgdb.py
tgverify/: __init__.py  info.json  tgverify.py
tgverify/locales/: ru_RU.po
timeout/: __init__.py  info.json  timeout.py
