[tool.poetry]
name = "orangescogs"
version = "1.0.0"
description = "Utility cogs for tgstation codebases"
authors = ["oranges <email@oranges.net.nz>", "crossedfall <https://github.com/Crossedfall>", "Will Roberts <https://github.com/wroberts"]
maintainers = ["oranges <email@oranges.net.nz>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.8.1,<3.12"
"discord.py" = "^2.2.3"
red-discordbot = "^3.5.2"
tgcommon = {git = "https://github.com/optimumtact/orangescogs.git", subdirectory = "tgcommon", branch="nextgen"}
aiomysql = "^0.1.1"
sqlalchemy = "^2.0.15"
black = "^23.3.0"

[tool.poetry.dev-dependencies]

[build-system] 
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
