[tool.poetry]
name = "orangescogs"
version = "0.1.0"
description = "Utility cogs for tgstation codebases"
authors = ["oranges <email@oranges.net.nz>", "crossedfall <https://github.com/Crossedfall>", "Will Roberts <https://github.com/wroberts"]
maintainers = ["oranges <email@oranges.net.nz>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.dev-dependencies]
Red-DiscordBot = "^3"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
fuzzywuzzy = "^0.18.0"
tomlkit = "^0.13.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
